fix: Show Allies Fainted on mobile again

--- a/src/app/features/pokemon-build/pokemon-moves-mobile/pokemon-moves-mobile.component.scss
+++ b/src/app/features/pokemon-build/pokemon-moves-mobile/pokemon-moves-mobile.component.scss
@@ -68,6 +68,11 @@
   app-multi-hit-combo-box {
     width: 45%;
   }
+
+  app-multi-hit-combo-box:has(mat-checkbox) {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 ::ng-deep .mat-mdc-standard-chip {
